# hil_visual_servoing_on_barrett_wam

./: README.md  test.day
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: barrett_model.pc  barrett_wam_moveit_config.pc  config_2.pc  config_4.pc  simulator.pc
devel/lib/simulator/: simulator
devel/share/barrett_model/cmake/: barrett_modelConfig.cmake
devel/share/barrett_wam_moveit_config/cmake/: barrett_wam_moveit_configConfig.cmake
devel/share/config_2/cmake/: config_2Config.cmake
devel/share/config_4/cmake/: config_4Config.cmake
devel/share/simulator/cmake/: simulator-msg-paths.cmake  simulatorConfig.cmake
src/barrett_model/robots/: wam7_bhand.urdf.xacro
src/barrett_moveit/barrett_wam_moveit_config/config/: fake_controllers.yaml  kinematics.yaml
src/barrett_moveit/barrett_wam_moveit_config/launch/: move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch
src/barrett_moveit/config_2/: .setup_assistant  CMakeLists.txt
src/barrett_moveit/config_2/config/: fake_controllers.yaml  kinematics.yaml  wam.srdf
src/barrett_moveit/config_2/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  (+10 more)
src/barrett_moveit/config_3/: .setup_assistant  CMakeLists.txt  package.xml
src/barrett_moveit/config_4/: .setup_assistant  CMakeLists.txt  package.xml
src/barrett_moveit/config_xenial_perturb/: .setup_assistant  CMakeLists.txt  package.xml
src/simulator/: CMakeLists.txt
src/simulator/include/: simulator.h  simulator_utilities.h
src/simulator/launch/: sim.launch
src/simulator/src/: simulator.cpp
(+51 files in other folders)
